fix dark mode btn and change font color

--- a/Masterwork/css/style.css
+++ b/Masterwork/css/style.css
@@ -7,16 +7,21 @@
 }
 
 :root {
-  --primary: #dc4f72;
-  --title-color: #2c3038;
-  --text-color: #5a5a5a;
-  --light-bg-color: #f7f9fc;
-  --testi-color: var(--text-color);
+  --primary:               #DC4F72;
+  --title-color:           #2C3038;
+  --text-color:            #5A5A5A;
+  --light-bg-color:        #F7F9FC;
+  --testi-color:           var(--text-color);
   --card-hover-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.09);
-  --card-box-shadow: 1px 5px 7.5px rgba(196, 196, 196, 0.2);
-  --card-background: #fff;
-  --box-shadow-color: rgba(0, 0, 0, 0.05);
-  --transformY: translateY(-0.5rem);
+  --card-box-shadow:       1px 5px 7.5px rgba(196, 196, 196, 0.2);
+  --card-background:       #FFF;
+  --box-shadow-color:      rgba(0, 0, 0, 0.05);
+  --transformY:            translateY(-0.5rem);
+  --banner-color-h3:       #2C3038;
+  --banner-color-des:      #5A5A5A;
+  --tool-item-hover:       #FFF;
+  --accordion-bg:          rgba(0, 0, 0, .03);
+  --accordion-color:       #212529;
 }
 body {
   background-color: var(--light-bg-color);
@@ -257,8 +262,8 @@ a.dropdown-item {
 
 header .navbar-nav .nav-link:hover,
 a.dropdown-item:hover {
-  color: var(--primary) !important;
-  background: white;
+  color:      var(--primary) !important;
+  background: transparent;
 }
 
 header a.nav-link,
@@ -361,18 +366,18 @@ header .navbar-nav .dropdown-menu:before {
 }
 
 .banner-left h3 {
-  font-size: 50px;
+  font-size:   50px;
   line-height: 57.5px;
-  color: var(--title-color);
+  color:       var(--banner-color-h3);
   font-weight: 700;
 }
 
 .banner-left p {
-  color: var(--text-color);
-  font-size: 20px;
+  color:       var(--banner-color-des);
+  font-size:   20px;
   line-height: 28px;
   font-weight: 400;
-  max-width: 450px;
+  max-width:   450px;
 }
 
 .banner-right img {
@@ -392,11 +397,11 @@ header .navbar-nav .dropdown-menu:before {
 }
 
 .tool-item:hover {
-  transition: 0.3s ease-in;
-  background-color: #ffffff;
-  border: 1px solid #eee;
-  box-shadow: var(--card-hover-box-shadow);
-  transform: translateY(-0.5rem);
+  transition:       0.3s ease-in;
+  background-color: var(--tool-item-hover);
+  border:           1px solid #EEE;
+  box-shadow:       var(--card-hover-box-shadow);
+  transform:        translateY(-0.5rem);
 }
 
 .tool-item p {
@@ -789,26 +794,27 @@ ul li input[type="checkbox"]:checked ~ p {
 
 .project .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
-  color: var(--primary);
-  border-bottom: 3px solid !important;
+  color:               var(--primary);
+  border-bottom:       3px solid !important;
   border-bottom-color: var(--primary) !important;
 }
 
-.project ul.nav-tabs li.nav-item {
-  font-size: 22px;
-  font-weight: 700;
-  float: left;
-  width: 33.333%;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  cursor: pointer;
-  text-align: center;
-  background: var(--card-background) !important;
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  background: var(--bg-color);
+  color:      #DC4F72 !important;
 }
-.nav-tabs .nav-item.show .nav-link,
-.nav-tabs .nav-link.active {
-  color: black;
+
+.project ul.nav-tabs li.nav-item {
+  font-size:   22px;
+  font-weight: 700;
+  float:       left;
+  width:       33.333%;
+  margin:      0;
+  padding:     0;
+  list-style:  none;
+  cursor:      pointer;
+  text-align:  center;
+  background:  var(--card-background) !important;
 }
 
 .project ul.nav-tabs li.nav-item a.nav-link {
@@ -842,30 +848,34 @@ ul li input[type="checkbox"]:checked ~ p {
 
 /*Testimonial*/
 .testimonial {
-  background-size: cover;
-  overflow: hidden;
-  background: var(--title-color);
-  background-image: linear-gradient(
-      to right,
-      var(--light-bg-color),
-      rgba(255, 255, 255, 0.92)
-    ),
-    url(../img/b2.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
+  background-size:       cover;
+  overflow:              hidden;
+  background:            var(--title-color);
+  background-image:      linear-gradient(
+                                 to right,
+                                 var(--light-bg-color),
+                                 rgba(255, 255, 255, 0.92)
+                         ),
+                         url(../img/b2.jpg);
+  background-repeat:     no-repeat;
+  background-position:   center;
   background-attachment: fixed;
-  background-size: cover;
+  background-size:       cover;
+}
+
+.testimonial .title, .testimonial .des {
+  color: var(--testi-color) !important;
 }
 
 .testimonial .slider-info {
-  max-width: 95%;
-  margin: 0 auto;
-  padding: 2rem;
-  display: grid;
+  max-width:             95%;
+  margin:                0 auto;
+  padding:               2rem;
+  display:               grid;
   grid-template-columns: auto 1fr;
-  grid-gap: 50px;
-  background-color: var(--card-background);
-  border-radius: 6px;
+  grid-gap:              50px;
+  background-color:      var(--card-background);
+  border-radius:         6px;
 }
 
 .testimonial .img-circle {
@@ -930,25 +940,27 @@ ul li input[type="checkbox"]:checked ~ p {
 }
 
 .testimonial .owl-theme .owl-dots .owl-dot span {
-  width: 40px;
-  height: 5px;
-  margin: 5px 5px;
-  background: #fff;
-  display: block;
-  border: none;
+  width:                       40px;
+  height:                      5px;
+  margin:                      5px 5px;
+  background:                  #FFF;
+  display:                     block;
+  border:                      none;
   -webkit-backface-visibility: visible;
-  transition: opacity 0.2s ease;
-  border-radius: 0;
-  position: relative;
+  transition:                  opacity 0.2s ease;
+  border-radius:               0;
+  position:                    relative;
 }
 
 .testimonial .owl-theme .owl-dots .owl-dot.active span,
 .testimonial .owl-theme .owl-dots .owl-dot:hover span {
   background: var(--primary);
 }
+
 .community {
   background-color: var(--light-bg-color);
 }
+
 /*Footer*/
 footer {
   background: var(--light-bg-color);
@@ -1006,14 +1018,14 @@ footer form {
 }
 
 footer .subscribe input[type="email"] {
-  background: var(--light-bg-color);
-  border: none;
-  padding: 12px 20px;
-  font-size: 16px;
-  outline: none;
-  width: 78%;
-  color: var(--title-color);
-  font-weight: 600;
+  background:    #F7F9FC;
+  border:        none;
+  padding:       12px 20px;
+  font-size:     16px;
+  outline:       none;
+  width:         78%;
+  color:         var(--title-color);
+  font-weight:   600;
   border-radius: 6px;
 }
 
@@ -1257,7 +1269,7 @@ footer ul.social li a:hover {
   }
 
   footer .copyright {
-    display: block !important;
+    display:    block !important;
     text-align: center !important;
   }
 
@@ -1267,6 +1279,15 @@ footer ul.social li a:hover {
 
   footer h3 {
     margin-bottom: 18px;
+  }
+
+  header nav.navbar-brand {
+    position: relative;
+  }
+
+  .dark-mode-btn {
+    position: absolute;
+    right:    60px;
   }
 }
 
@@ -1315,11 +1336,12 @@ footer ul.social li a:hover {
   }
 
   .accordion .card-header {
-    padding: 0;
+    padding:          0;
+    background-color: var(--accordion-bg);
   }
 
   .accordion a.nav-link {
-    color: #212529 !important;
+    color: var(--title-color) !important;
     font-size: 20px;
     font-family: "Nunito", sans-serif;
     font-weight: 500;
@@ -1328,17 +1350,21 @@ footer ul.social li a:hover {
 
   .accordion a.nav-link[aria-expanded="true"] {
     color: var(--primary) !important;
-    background: white;
+    background: var(--accordion-bg);
     border-bottom: 3px solid var(--primary);
   }
+
   .accordion .card-body {
     padding: 20px 15px !important;
+    background: var(--accordion-bg);
   }
+
   .accordion .card-body h3 {
     margin: 14px 0;
     font-size: 26px;
     line-height: 33px;
     font-weight: bold;
+    color: var(--title-color);
   }
 
   .accordion .card-body p {
